; ModuleID = '/home/carl/AnghaBench/linux/drivers/android/extr_binder.c_binder_get_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/android/extr_binder.c_binder_get_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.binder_node = type { i32 }
%struct.binder_proc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.binder_node* (%struct.binder_proc*, i32)* @binder_get_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.binder_node* @binder_get_node(%struct.binder_proc* %0, i32 %1) #0 {
  %3 = alloca %struct.binder_proc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.binder_node*, align 8
  store %struct.binder_proc* %0, %struct.binder_proc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.binder_proc*, %struct.binder_proc** %3, align 8
  %7 = call i32 @binder_inner_proc_lock(%struct.binder_proc* %6)
  %8 = load %struct.binder_proc*, %struct.binder_proc** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.binder_node* @binder_get_node_ilocked(%struct.binder_proc* %8, i32 %9)
  store %struct.binder_node* %10, %struct.binder_node** %5, align 8
  %11 = load %struct.binder_proc*, %struct.binder_proc** %3, align 8
  %12 = call i32 @binder_inner_proc_unlock(%struct.binder_proc* %11)
  %13 = load %struct.binder_node*, %struct.binder_node** %5, align 8
  ret %struct.binder_node* %13
}

declare dso_local i32 @binder_inner_proc_lock(%struct.binder_proc*) #1

declare dso_local %struct.binder_node* @binder_get_node_ilocked(%struct.binder_proc*, i32) #1

declare dso_local i32 @binder_inner_proc_unlock(%struct.binder_proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
